Update node-sass to dart-sass, encapsulate colours and fix grey text colour contrast ratio (#131)
* Updates node-sass -> dart-sass

* Pulls out colours to separate file

* Fixes grey text colour contrast ratio

--- a/scss/_author.scss
+++ b/scss/_author.scss
@@ -1,3 +1,5 @@
+@use 'colours';
+
 .default-author {
   .h4 {
     font-size: 15px;
@@ -15,7 +17,7 @@
   }
 
   .talk_date {
-      color: grey;
+      color: colours.$grey;
       font-size: 13px;
       font-family: $font-family;
   }
@@ -42,18 +44,18 @@
         text-align: right;
 
       a {
-        border-bottom: 3px solid $turquoise;
+        border-bottom: 3px solid colours.$teal;
       }
 
       a:hover {
-        color: $white;
-        background-color: $turquoise;
+        color: colours.$white;
+        background-color: colours.$teal;
       }
     }
 
   .blog {
     margin-bottom: 0;
-    color: $turquoise;
+    color: colours.$teal;
     font-weight: $font-bold;
   }
 
